// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchContact should not render if not open 1`] = `<DocumentFragment />`;

exports[`SearchContact should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw bHERBC absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm goVygI w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Search Contact
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            Find the contact you need quickly and conveniently
          </div>
          <div
            class="-mx-10"
          >
            <div
              class="bg-theme-neutral-contrast px-10 pt-8 pb-8 mt-8"
              data-testid="SearchBar"
            >
              <div
                class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
              >
                <div
                  class="sc-AxirZ iQaTP w-4 mr-8 text-theme-neutral-300"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    search.svg
                  </svg>
                </div>
                <div
                  class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
                >
                  <input
                    class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                    data-testid="Input"
                    placeholder="Search..."
                  />
                </div>
                <button
                  class="sc-AxjAm kbZyZT my-1"
                  color="primary"
                  data-testid="SearchBar__button"
                  type="button"
                >
                  <span
                    class="px-2 text-md"
                  >
                    Find it
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="sc-fzpans khsYbJ"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          ContactAvatar
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxirZ jMwzyA"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Cryptoasset
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Avatar
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--4"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="sc-fznyAO cInDKW group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      >
                        <div
                          class="mr-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="ContactListItem__user--avatar"
                          >
                            <img
                              alt="Brian"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="Brian"
                            />
                            <span
                              class="absolute text-sm font-semibold text-theme-background"
                            >
                              BR
                            </span>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <span
                          class="font-semibold"
                          data-testid="ContactListItem__name"
                        >
                          Brian
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                              title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D61mfSggzb…oHaqJ3Dyib
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end "
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="float-right"
                          >
                            <button
                              class="sc-AxjAm gBWztV"
                              color="primary"
                              type="button"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fznyAO cInDKW group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      >
                        <div
                          class="mr-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="ContactListItem__user--avatar"
                          >
                            <img
                              alt="Rok"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"100\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"70\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                              title="Rok"
                            />
                            <span
                              class="absolute text-sm font-semibold text-theme-background"
                            >
                              RO
                            </span>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <span
                          class="font-semibold"
                          data-testid="ContactListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DFJ5Z51F1e…h495LZkc6T
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end "
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="float-right"
                          >
                            <button
                              class="sc-AxjAm gBWztV"
                              color="primary"
                              type="button"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fznyAO jndzAN group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 border-b border-dashed border-theme-neutral-200
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                              title="D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D9YiyRYMBS…HofWgJLM7f
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end border-b border-dashed border-theme-neutral-200"
                      />
                    </td>
                  </tr>
                  <tr
                    class="sc-fznyAO cInDKW group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                              title="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DKrACQw7yt…dQhZjfXYqu
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end "
                      />
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchContact should render a modal with custom title and description 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw bHERBC absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm goVygI w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Modal title
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            Modal description
          </div>
          <div
            class="-mx-10"
          >
            <div
              class="bg-theme-neutral-contrast px-10 pt-8 pb-8 mt-8"
              data-testid="SearchBar"
            >
              <div
                class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
              >
                <div
                  class="sc-AxirZ iQaTP w-4 mr-8 text-theme-neutral-300"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    search.svg
                  </svg>
                </div>
                <div
                  class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
                >
                  <input
                    class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                    data-testid="Input"
                    placeholder="Search..."
                  />
                </div>
                <button
                  class="sc-AxjAm kbZyZT my-1"
                  color="primary"
                  data-testid="SearchBar__button"
                  type="button"
                >
                  <span
                    class="px-2 text-md"
                  >
                    Find it
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="sc-fzpans khsYbJ"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          ContactAvatar
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxirZ jMwzyA"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Cryptoasset
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Avatar
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--4"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top "
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="sc-fznyAO cInDKW group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      >
                        <div
                          class="mr-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="ContactListItem__user--avatar"
                          >
                            <img
                              alt="Brian"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="Brian"
                            />
                            <span
                              class="absolute text-sm font-semibold text-theme-background"
                            >
                              BR
                            </span>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <span
                          class="font-semibold"
                          data-testid="ContactListItem__name"
                        >
                          Brian
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                              title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D61mfSggzb…oHaqJ3Dyib
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end "
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="float-right"
                          >
                            <button
                              class="sc-AxjAm gBWztV"
                              color="primary"
                              type="button"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fznyAO cInDKW group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      >
                        <div
                          class="mr-4"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="ContactListItem__user--avatar"
                          >
                            <img
                              alt="Rok"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"100\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"70\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                              title="Rok"
                            />
                            <span
                              class="absolute text-sm font-semibold text-theme-background"
                            >
                              RO
                            </span>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <span
                          class="font-semibold"
                          data-testid="ContactListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DFJ5Z51F1e…h495LZkc6T
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end "
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="float-right"
                          >
                            <button
                              class="sc-AxjAm gBWztV"
                              color="primary"
                              type="button"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="sc-fznyAO jndzAN group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 border-b border-dashed border-theme-neutral-200
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                              title="D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D9YiyRYMBS…HofWgJLM7f
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end border-b border-dashed border-theme-neutral-200"
                      />
                    </td>
                  </tr>
                  <tr
                    class="sc-fznyAO cInDKW group"
                    data-testid="TableRow"
                  >
                    <td
                      class="w-1"
                    >
                      <div
                        class="sc-fzplWN jpmHPF"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL"
                      />
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN ffxBmL justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="sc-fznZeY eYjanB border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="w-1 
								"
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                              title="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                            />
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN ffxBmL"
                      >
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fznKkj lbPMLS text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DKrACQw7yt…dQhZjfXYqu
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN PBtuJ justify-end "
                      />
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
